--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # REQUIRED CHANGES
 # Edit next line to provide your own name.
-title: Jonell Udasco | Professional Portfolio
+title: Jonell Elizabeth Udasco | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://judasco.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
